- Cleaned the app-main.py - Added date_time_format to appConfig.ini and updated fileTools.py - Updated tab GUIs: icons assigned to buttons on ControlPanelTab and prepared XYGraphTab for plot implementation - Handled inconsistency between appConfig.ini and loaded CSV data file

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,13 +1,14 @@
 [app.csv_data]
 data_separator = ;
+date_time_format = RRRR-MM-DD HH-MM-SS
 filtered_columns = 
-	Record Time[s], 
-	Avg.U12[V], 
-	Avg.3P[kW], 
-	Avg.3Q[kvar], 
-	3Cosφ[], 
-	Avg.f[Hz], 
-	Avg.U4dc[V], 
-	DOI1[], 
+	Record Time[s],
+	Avg.U12[V],
+	Avg.3P[kW],
+	Avg.3Q[kvar],
+	3Cosφ[],
+	Avg.f[Hz],
+	Avg.U4dc[V],
+	DOI1[],
 	DOI4[]
 
