- Implemented the section updating the values of dataframe loaded from CSV file - Updated the AbstractTableModel.py with Qt.ItemDataRole.DecorationRole and Qt.ItemDataRole.ToolTipRole - Renamed CSVRawDataTab.py to CSVDataTab.py (also other similar files)

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,9 +1,12 @@
 [app.csv_data]
 data_separator = ;
 date_time_format = RRRR-MM-DD HH-MM-SS
+sample_period_s = 0.20
 filtered_columns = 
 	Record Time[s],
 	Avg.U12[V],
+	Avg.U23[V],
+	Avg.U31[V],
 	Avg.3P[kW],
 	Avg.3Q[kvar],
 	3Cosφ[],
