- Almost finished the XYGraphTab - Added File->Open App Config File (Ctrl+I) - PQDiagramTab cosPhi label is updated correctly now - Removed hardcoded sections with "Avg.3P[kW]" and "Avg.3Q[kvar]" -> added to config file - Removed hardcoded sections with "Avg.U12[V]",	"Avg.U23[V]" and "Avg.U31[V]" -> added to config file

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,6 +1,6 @@
 [app.csv_data]
 data_separator = ;
-date_time_format = RRRR-MM-DD HH-MM-SS
+date_time_format = %%Y-%%m-%%d %%H:%%M:%%S
 sample_period_s = 0.20
 filtered_columns = 
 	Record Time[s],
@@ -14,4 +14,22 @@ filtered_columns =
 	Avg.U4dc[V],
 	DOI1[],
 	DOI4[]
+avg_voltages_ph2ph =
+	Avg.U12[V],
+	Avg.U23[V],
+	Avg.U31[V]
+avg_u_ph2ph_mean = Avg.UΔ[V]
 
+[app.uncertainties]
+# uncertainty 0.2%
+uncertainty_P = 0.002
+# uncertainty 1%
+uncertainty_Q = 0.01
+
+[app.xy_graph]
+# target value in kW/kvar
+setpoint = 1200
+
+[app.pq_diagram]
+real_power_3ph = Avg.3P[kW]
+reactive_power_3ph = Avg.3Q[kvar]
