- Created app-main.spec file for creating distribution folder - Prepared for installer creating with InstallForge (InstalForgeSettings.ifp) - Removed unused icons - Updated README.md - Slightly updated XYGraphTab.ui - Removed *.spec from .gitignore

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -27,7 +27,7 @@ uncertainty_P = 0.002
 uncertainty_Q = 0.01
 
 [app.xy_graph]
-# target value in kW/kvar
+# target value in kW
 setpoint = 1200
 
 [app.pq_diagram]
