- Implemented automatic setting of units in Setpoint and Gradient labels - Added mean_interval_length to configFile.ini for possibility to change interval length of mean calculation of ProcessVarMaxVal

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -27,8 +27,10 @@ uncertainty_P = 0.002
 uncertainty_Q = 0.01
 
 [app.xy_graph]
-# target value in kW
+# target value in kW/kvar
 setpoint = 1200
+# length of each element in interval is sample_period_s
+mean_interval_length = 7
 
 [app.pq_diagram]
 real_power_3ph = Avg.3P[kW]
