- Implemented checkForAnomalyInCSVdata() - Added fetch_data_sequentially option to configFile

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,4 +1,6 @@
 [app.csv_data]
+# Enable fetching data sequentially to the table view
+fetch_data_sequentially = True
 data_separator = ;
 date_time_format = %%Y-%%m-%%d %%H:%%M:%%S
 sample_period_s = 0.20
