- Added [app.moving_average] and [app.auto_connect] sections to configFile - PQ diagram changed to show in ratio mode (using real_power_3ph_nominal from configFile)

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,6 +1,4 @@
 [app.csv_data]
-# Enable fetching data sequentially to the table view
-fetch_data_sequentially = True
 data_separator = ;
 date_time_format = %%Y-%%m-%%d %%H:%%M:%%S
 sample_period_s = 0.20
@@ -21,19 +19,30 @@ avg_voltages_ph2ph =
 	Avg.U23[V],
 	Avg.U31[V]
 avg_u_ph2ph_mean = Avg.UΔ[V]
+# Enable fetching data sequentially to the table view
+fetch_data_sequentially = True
+
+[app.moving_average]
+elements_before = 5
+elements_after = 10
 
 [app.uncertainties]
-# uncertainty 0.2%
+# Uncertainty 0.2%
 uncertainty_P = 0.002
-# uncertainty 1%
+# Uncertainty 1%
 uncertainty_Q = 0.01
 
 [app.xy_graph]
-# target value in kW/kvar
+# Target value in kW/kvar
 setpoint = 1200
-# length of each element in interval is sample_period_s
+# Length of each element in interval is sample_period_s
 mean_interval_length = 7
 
 [app.pq_diagram]
 real_power_3ph = Avg.3P[kW]
 reactive_power_3ph = Avg.3Q[kvar]
+# Nominal value of 3ph real power in kW
+real_power_3ph_nominal = 1750
+
+[app.auto_connect]
+right_axis_digital_signal = DOI4[]
