A huge commit before diploma thesis submission: - reimplemented TimeDelayTab, - implemented GradientTab, - implemented SetpointErrorTab - implemented TestTableModel - updated AbstractTableModel

--- a/dp_app/appConfig.ini
+++ b/dp_app/appConfig.ini
@@ -1,3 +1,11 @@
+[app.plots]
+# Symbol options: o (circle), s (square), t (triangle), d (diamond), +, t1 (triangle pointing upwards), t2 (triangle pointing right side), t3 (triangle pointing left side), p (pentagon), h (hexagon), star, x (cross), arrow_up, arrow_right, arrow_down, arrow_left
+click_point_symbol = +
+click_point_symbol_size = 15
+click_point_x_offset = 45
+click_point_y_offset = 65
+click_point_label_size = 15
+
 [app.csv_data]
 data_separator = ;
 date_time_format = %%Y-%%m-%%d %%H:%%M:%%S
@@ -19,30 +27,176 @@ avg_voltages_ph2ph =
 	Avg.U23[V],
 	Avg.U31[V]
 avg_u_ph2ph_mean = Avg.UΔ[V]
+real_power_3ph = Avg.3P[kW]
+reactive_power_3ph = Avg.3Q[kvar]
+signalization_U = Avg.U4dc[V]
+frequency = Avg.f[Hz]
+cos_phi = 3Cosφ[]
 # Enable fetching data sequentially to the table view
-fetch_data_sequentially = True
+# fetch_data_sequentially = True
 
-[app.moving_average]
-elements_before = 5
-elements_after = 10
+# [app.moving_average]
+# moving_avg_window_size = 20
 
 [app.uncertainties]
 # Uncertainty 0.2%
 uncertainty_P = 0.002
 # Uncertainty 1%
 uncertainty_Q = 0.01
+# Uncertainty 0.05%
+uncertainty_U = 0.0005
+# Uncertainty 0.01
+uncertainty_cos_phi = 0.01
+# Uncertainty 0.005 Hz
+uncertainty_freq = 0.005
 
 [app.xy_graph]
-# Target value in kW/kvar
-setpoint = 1200
-# Length of each element in interval is sample_period_s
+# Power target value in kW/kvar
+power_setpoint = 1200
 mean_interval_length = 7
+moving_avg_window_size = 20
 
 [app.pq_diagram]
 real_power_3ph = Avg.3P[kW]
 reactive_power_3ph = Avg.3Q[kvar]
 # Nominal value of 3ph real power in kW
 real_power_3ph_nominal = 1750
+moving_avg_window_size = 20
 
 [app.auto_connect]
 right_axis_digital_signal = DOI4[]
+# Nominal value of 3ph real power in kW
+real_power_3ph_nominal = 1750
+moving_avg_window_size = 20
+zoom_ratio = 5
+
+[app.gradient]
+real_power_3ph = Avg.3P[kW]
+reactive_power_3ph = Avg.3Q[kvar]
+# Nominal value of 3ph real power in kW
+real_power_3ph_nominal = 1750
+moving_avg_window_size = 20
+table_headers = 
+	Time,
+	Point sequences,
+	Gradient [%%Pn/min],
+	Note
+point_sequences = 
+	1 -> 2,
+	3 -> 4,
+	5 -> 6,
+	7 -> 8,
+	9 -> 10,
+	11 -> 12,
+	13 -> 14,
+	15 -> 16,
+	17 -> 18,
+	19 -> 20,
+	21 -> 22,
+	23 -> 24,
+	25 -> 26
+sequentions_notes = 
+	production run-up after manual start,
+	60 %% -> 30 %% Pn in control system,
+	30 %% -> 60 %% Pn in control system,
+	60 %% -> 100 %% Pn in control system,
+	command P4 -> P3,
+	command P3 -> P2,
+	command P2 -> P1,
+	command P1 -> P4
+
+[app.time_delay]
+real_power_3ph = Avg.3P[kW]
+reactive_power_3ph = Avg.3Q[kvar]
+cos_phi = 3Cosφ[]
+signalization = Avg.U4dc[V]
+commanding = DOI1[]
+button = DOI4[]
+moving_avg_window_size = 20
+table_headers = 
+	Time,
+	Point sequences,
+	Regulation delay [min],
+	Reach time [min],
+	Note
+point_sequences = 
+	4 -> 5 -> 6,
+	28 -> 29 -> 30,
+	52 -> 53 -> 54,
+	55 -> 56 -> 57,
+	58 -> 59 -> 60,
+	61 -> 62 -> 63,
+	64 -> 65 -> 66,
+	67 -> 68 -> 69
+sequentions_notes = 
+	60 %% -> 30 %% Pn in control system,
+	30 %% -> 60 %% Pn in control system,
+	command P4 - irrelevant because of primary power volatility,
+	command P3,
+	command P2,
+	command P1,
+	command P4,
+	command P3
+
+[app.setpoint_error]
+real_power_3ph = Avg.3P[kW]
+reactive_power_3ph = Avg.3Q[kvar]
+cos_phi = 3Cosφ[]
+# Nominal value of 3ph real power in kW
+real_power_3ph_nominal = 1750
+# Power target value in kW/kvar
+power_setpoint = 1200
+# cos(φ) target value
+cos_phi_setpoint = 0.8
+mean_interval_length = 7
+moving_avg_window_size = 20
+table_headers = 
+	Time,
+	Points,
+	cos(φ)set [-],
+	(P or Q)set [1/Pn],
+	δ(P or Q) [%%],
+	|δcos(φ)| [-],
+	Note
+points = 
+	1,
+	2,
+	3,
+	4,
+	5,
+	6,
+	7,
+	8,
+	9,
+	10,
+	11,
+	12,
+	13,
+	14,
+	15,
+	16,
+	17,
+	18,
+	19,
+	20
+points_notes = 
+	30 %% Pn & cos(φ) = 0.8 in control system,
+	30 %% Pn & cos(φ) = 0.9 in control system,
+	30 %% Pn & cos(φ) = 0.95 in control system,
+	30 %% Pn & cos(φ) = -0.95 in control system,
+	30 %% Pn & cos(φ) = -0.9 in control system,
+	30 %% Pn & cos(φ) = -0.8 in control system,
+	30 %% Pn & cos(φ) = 1 in control system,
+	60 %% Pn & cos(φ) = 1 in control system,
+	60 %% Pn & cos(φ) = 0.848 in control system,
+	Discarded due to high lighting volatility,
+	Discarded due to high lighting volatility,
+	Discarded due to high lighting volatility,
+	Discarded due to high lighting volatility,
+	Discarded due to high lighting volatility,
+	60 %% Pn & cos(φ) = -0.9 by a simulated command,
+	60 %% Pn & cos(φ) = -0.95 by a simulated command,
+	60 %% Pn & cos(φ) = 1 by a simulated command,
+	60 %% Pn & cos(φ) = 0.95 by a simulated command,
+	60 %% Pn & cos(φ) = 0.9 by a simulated command,
+	Discarded due to high lighting volatility
